Fix overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,7 @@
 
 body {
   background-color: $main-background;
+  overflow-x: hidden;
 }
 
 .App {
